src/test/deca/codegen/invalid/null-delisting-method.deca
// Description:
//    Déréférencement de null avec une méthode
//
// Resultats:
//    Execution error
//    Error : Null reference exception.
//
// Historique:
//    cree le 20/01/2023

class A {
    int x(){
        return 0;
    }
}

{
    A a;
    println(a.x());
}